hydroflow/tests/compile-fail/surface_demux_badarg.stderr
error: Argument must be a two-argument closure expression
 --> tests/compile-fail/surface_demux_badarg.rs:5:48
  |
5 |         my_demux = source_iter(0..10) -> demux(std::mem::drop);
  |                                                ^^^^^^^^^^^^^^
